# IMU

./: .cproject  .project  CMakeLists.txt
demo_IMU/: demo_IMU.cpp  demo_IMU.cpp~
include/xsens/: xssdidata.h
src/xcommunication/: serialinterface.cpp
src/xstypes/: xsvector.c
